--- a/Edumoon2.o-master/about.html
+++ b/Edumoon2.o-master/about.html
@@ -10,17 +10,17 @@
     <title>EDUMOON</title>
     <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
-    <link rel="stylesheet" href="../src/components/style.css">
+    <link rel="stylesheet" href="../components/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&amp;display=swap" rel="stylesheet"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"><link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="../src/components/style.css"><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&amp;display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&amp;display=swap" rel="stylesheet"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="../components/style.css"><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&amp;display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&amp;display=swap" rel="stylesheet"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="description" content="Slicebox - 3D Image Slider with Fallback">
     <meta name="keywords" content="jquery, css3, 3d, webkit, fallback, slider, css3, 3d transforms, slices, rotate, box, automatic"><meta name="author" content="Pedro Botelho for Codrops">
     <script type="text/javascript" src="modernizr.custom.46884.js"></script>
-    <link rel="stylesheet" href="../src/components/about.css">
+    <link rel="stylesheet" href="../components/about.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer"><script defer="defer" src="/Edumoon2.o/static/js/main.5b14f42c.js"></script><link href="/Edumoon2.o/static/css/main.b860d491.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"><div style="overflow-x: hidden;"><div><div class="sidebar open" style="display: block;"><div class="logo-details"><i class="bx bxs-moon icon"></i><div class="logo_name"><span style="color: blue;">Edu</span>Moon</div></div><ul class="nav-list">
                         <li><a href="../src/courses.html"><i class="bx bxs-bookmark"></i><span id="btn1" class=" links_name">Courses</span></a><span class="tooltip">Courses</span></li>
@@ -36,7 +36,7 @@
  flex-row
  align-items-center
  justify-content-start
- "><div class="logo_container"><a href="../src/home.html"><div class="logo_text">Edu<span>Moon</span></div></a>
+ "><div class="logo_container"><a href="../src/index.html"><div class="logo_text">Edu<span>Moon</span></div></a>
                       </div><nav class="main_nav_container ml-auto"><ul class="main_nav">
             <li><a href="../src/courses.html">Courses</a></li>
             <li><a href="../src/tutions.html">Tuitions</a></li>
@@ -158,7 +158,7 @@
                     <i class="fab fa-linkedin-in"></i></a></div></div><div class="single-footer">
                         <h4 style="color: black;">main menu</h4>
                         <ul>
-                            <li><a href="../src/home.html"><i class="fas fa-chevron-right"></i> Home</a></li>
+                            <li><a href="../src/index.html"><i class="fas fa-chevron-right"></i> Home</a></li>
                             <li><a href="../src/tutions.html"><i class="fas fa-chevron-right"></i> Tutions</a>
                             </li><li><a href="../src/courses.html"><i class="fas fa-chevron-right"></i> Courses</a></li>
                             <li><a href="../src/events.html"><i class="fas fa-chevron-right"></i> Events</a></li>
