--- a/Edumoon2.o-master/courses.html
+++ b/Edumoon2.o-master/courses.html
@@ -12,7 +12,7 @@
         <title>EDUMOON</title>
         <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
-        <link rel="stylesheet" href="../src/components/style.css">
+        <link rel="stylesheet" href="../components/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&amp;display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&amp;display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
         <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="stylesheet" href="../src/components/style.css">
+        <link rel="stylesheet" href="../components/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&amp;display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&amp;display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -81,7 +81,7 @@
             <div>edumoonhelpdesk@gmail.com</div></li></ul></div>
             <a href="lms/" style="float: right; background-color: aliceblue;">Register or Login</a></div></div></div></div></div>
             <div class="header_container">
-            <div class="container"><div class="row"><div class="col"><div class="header_contentd-flex flex-row align-items-center justify-content-start"><div class="logo_container"><a href="../src/home.html"><div class="logo_text">Edu<span>Moon</span></div></a>
+            <div class="container"><div class="row"><div class="col"><div class="header_contentd-flex flex-row align-items-center justify-content-start"><div class="logo_container"><a href="../src/index.html"><div class="logo_text">Edu<span>Moon</span></div></a>
                       </div><nav class="main_nav_container ml-auto"><ul class="main_nav">
             <li><a href="../src/courses.html">Courses</a></li>
             <li><a href="../src/tutions.html">Tuitions</a></li>
@@ -177,7 +177,7 @@
                 <div class="single-footer">
                     <h4 style="color: black;">main menu</h4>
                     <ul>
-                        <li><a href="../src/home.html"><i class="fas fa-chevron-right"></i> Home</a></li>
+                        <li><a href="../src/index.html"><i class="fas fa-chevron-right"></i> Home</a></li>
                         <li><a href="../src/tutions.html"><i class="fas fa-chevron-right"></i> Tutions</a>
                         </li><li><a href="../src/courses.html"><i class="fas fa-chevron-right"></i> Courses</a></li>
                         <li><a href="../src/events.html"><i class="fas fa-chevron-right"></i> Events</a></li>
